# rank-matcher

./: .gitignore  Cargo.toml  README.md  pom.xml
rank-matcher-client-j/: pom.xml
rank-matcher-client-j/src/java/net/easecation/rankmatcher/: RankMatcherClient.java
rank-matcher-client-j/src/java/net/easecation/rankmatcher/api/: CharReader.java  Message.java  MessageReceiver.java  MessageSender.java  MessageType.java
rank-matcher-client-j/src/java/net/easecation/rankmatcher/api/message/: AddArenaMessage.java  AddPlayerMessage.java  ConnectionStateMessage.java  FormatErrorMessage.java  GetOrSubscribeStateMessage.java  GetStateMessage.java  MatchFailureMessage.java  MatchSuccessMessage.java  RemoveArenaMessage.java  RemovePlayerMessage.java  SubscribeStateMessage.java
rank-matcher-client-j/src/java/net/easecation/rankmatcher/network/: MessageCodec.java  MessageHandler.java
src/: arena.rs  main.rs  packet.rs
