[package]
name = "rank-matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18"
tokio-tungstenite = "0.18"
lockfree-cuckoohash = "0.1"
dashmap = "5.4"
futures-channel = "0.3"
futures-util = "0.3"

[dependencies.tokio]
version = "1.23"
features = ["rt-multi-thread", "macros", "time"]
